Fixed minor z-index issue with new inline link dialog (WordPress 4.5)

--- a/css/black-studio-tinymce-widget.css
+++ b/css/black-studio-tinymce-widget.css
@@ -114,6 +114,7 @@ div[id*="black-studio-tinymce"] .mce-wp-fullscreen {
 	z-index: 1000100 !important;
 }
 
+
 /* Fix z-index for link dialog windows (used on recent WP versions) */
 
 .wp-customizer #wp-link-backdrop {
@@ -124,6 +125,10 @@ div[id*="black-studio-tinymce"] .mce-wp-fullscreen {
 	z-index: 500020;
 }
 
+.wp-customizer .ui-autocomplete.wplink-autocomplete,
+.wp-customizer div.mce-inline-toolbar-grp {
+	z-index: 500025;
+}
 
 
 /* Change mouse cursor when waiting */
